--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/custom.css">
     <link rel="stylesheet" href="styles/includes/header.css">
+    <link rel="stylesheet" href="styles/includes/footer.css">
     <title>Erduo Index page</title>
   </head>
   <body>
