--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     </script>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/custom.css">
-    <link rel="stylesheet" href="styles/includes/header.css">
-    <link rel="stylesheet" href="styles/includes/footer.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <title>Erduo Index page</title>
   </head>
   <body>
-    <div class="header">
+    <div class="header relative">
       <div class="container flex f-V-B">
         <div class="logo">
-          <div class="img" style="background-image: url('images/logo-white.png')"></div>
+          <div class="img" style="background-image: url('images/logo-white.svg')"></div>
         </div>
-        <ul class="menu">
-          <li><a href="#index">首頁</a></li>
-          <li><a href="#services">服務</a></li>
-          <li><a href="#works">作品</a></li>
-          <li><a href="#contact">聯絡我們</a></li>
+        <ul class="menu flex f-R">
+          <li><a class="t-C inline-block relative" href="#index">首頁<span class="inline-block absolute">Home</span></a></li>
+          <li><a class="t-C inline-block relative" href="#service">服務<span class="inline-block absolute">Service</span></a></li>
+          <li><a class="t-C inline-block relative" href="#works">作品<span class="inline-block absolute">Works</span></a></li>
+          <li><a class="t-C inline-block relative" href="#contact">聯絡我們<span class="inline-block absolute">Contact</span></a></li>
         </ul>
       </div>
     </div>
