[Roger]:edit index adjust

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <title>Erduo Index page</title>
   </head>
   <body>
-    <div class="header relative">
+    <div class="header fixed">
       <div class="container flex f-V-B">
         <div class="logo">
           <div class="img" style="background-image: url('images/logo-white.svg')"></div>
@@ -36,6 +36,11 @@
           <li><a class="t-C inline-block relative" href="#works">作品<span class="inline-block absolute">Works</span></a></li>
           <li><a class="t-C inline-block relative" href="#contact">聯絡我們<span class="inline-block absolute">Contact</span></a></li>
         </ul>
+      </div>
+    </div>
+    <div class="banner p-T-20">
+      <div class="container full-40">
+        <div class="banner-img relative" style="background-image: url('images/banner-01.jpg')"></div>
       </div>
     </div>
   </body>
