--- a/index.html
+++ b/index.html
@@ -94,6 +94,50 @@
         </div>
       </div>
     </div>
+    <div class="feature">
+      <div class="container full-40">
+        <div class="feature-card">
+          <div class="title t-C m-B-20">SINCE 2018</div>
+          <div class="intro t-C m-B-40">團隊從團隊從2018成立，陸續服務許多客戶<br>專業的服務深受肯定</div>
+          <ul class="t-C">
+            <li class="card">
+              <div class="content m-B-20">50+</div>
+              <div class="des">專案完成數</div>
+            </li>
+            <li class="card">
+              <div class="content m-B-20">1~2 W</div>
+              <div class="des">製作時間</div>
+            </li>
+            <li class="card">
+              <div class="content m-B-20">6Y</div>
+              <div class="des">工程師平均年資</div>
+            </li>
+            <li class="card">
+              <div class="content m-B-20">666</div>
+              <div class="des">好評數</div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="works">
+      <div class="container full-40">
+        <div class="works-card">
+          <div class="title-box"><span>作品<small>Works</small></span>
+            <div class="function-box">
+              <ul class="filter">
+                <li class="option"><a href="javascript:;" data-filter="all">全部</a></li>
+                <li class="option"><a href="javascript:;" data-filter="01">網頁</a></li>
+                <li class="option"><a href="javascript:;" data-filter="02">系統</a></li>
+                <li class="option"><a href="javascript:;" data-filter="03">LOGO</a></li>
+                <li class="option"><a href="javascript:;" data-filter="04">UI/X</a></li>
+                <li class="option"><a href="javascript:;" data-filter="05">CI設計</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="footer">
       <div class="container">
         <div class="logo">
