--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="author" content="">
     <meta name="copyright" content="">
     <meta name="robots" content="none">
-    <script>// 共用參數</script>
     <script src="script/jquery/jquery-3.6.0.js"></script>
+    <script src="script/script.js"></script>
     <script>
       $(document).ready(function() {
       	$(window).scroll(function() {
@@ -139,46 +139,46 @@
             <div class="function-box">
               <ul class="filter">
                 <li class="option"><a class="active" href="javascript:;" data-filter="all">全部</a></li>
-                <li class="option"><a href="javascript:;" data-filter="01">網頁</a></li>
-                <li class="option"><a href="javascript:;" data-filter="02">系統</a></li>
-                <li class="option"><a href="javascript:;" data-filter="03">LOGO</a></li>
-                <li class="option"><a href="javascript:;" data-filter="04">UI/X</a></li>
-                <li class="option"><a href="javascript:;" data-filter="05">CI設計</a></li>
+                <li class="option"><a href="javascript:;" data-filter="1">網頁</a></li>
+                <li class="option"><a href="javascript:;" data-filter="2">系統</a></li>
+                <li class="option"><a href="javascript:;" data-filter="3">LOGO</a></li>
+                <li class="option"><a href="javascript:;" data-filter="4">UI/X</a></li>
+                <li class="option"><a href="javascript:;" data-filter="5">CI設計</a></li>
               </ul>
             </div>
           </div>
           <ul class="card-box">
-            <div class="work-card">
+            <div class="work-card" data-cate="all 3">
               <div class="img-box">
                 <div class="img" style="background-image: url(./images/works-01.jpg)"></div><a class="color-box" href="javascript:;">Detail</a>
               </div>
               <div class="title">介紹標題介紹標題</div>
             </div>
-            <div class="work-card">
+            <div class="work-card" data-cate="all 3">
               <div class="img-box">
                 <div class="img" style="background-image: url(./images/works-02.jpg)"></div><a class="color-box" href="javascript:;">Detail</a>
               </div>
               <div class="title">介紹標題介紹標題</div>
             </div>
-            <div class="work-card">
+            <div class="work-card" data-cate="all 3">
               <div class="img-box">
                 <div class="img" style="background-image: url(./images/works-03.jpg)"></div><a class="color-box" href="javascript:;">Detail</a>
               </div>
               <div class="title">介紹標題介紹標題</div>
             </div>
-            <div class="work-card">
+            <div class="work-card" data-cate="all 1">
               <div class="img-box">
                 <div class="img" style="background-image: url(./images/works-04.jpg)"></div><a class="color-box" href="javascript:;">Detail</a>
               </div>
               <div class="title">介紹標題介紹標題</div>
             </div>
-            <div class="work-card">
+            <div class="work-card" data-cate="all 1">
               <div class="img-box">
                 <div class="img" style="background-image: url(./images/works-05.jpg)"></div><a class="color-box" href="javascript:;">Detail</a>
               </div>
               <div class="title">介紹標題介紹標題</div>
             </div>
-            <div class="work-card">
+            <div class="work-card" data-cate="all 1">
               <div class="img-box">
                 <div class="img" style="background-image: url(./images/works-06.jpg)"></div><a class="color-box" href="javascript:;">Detail</a>
               </div>
