--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="robots" content="none">
     <script>// 共用參數</script>
     <script src="script/jquery/jquery-3.6.0.js"></script>
-    <script src="script/script.js"></script>
+    <script src="script/script.js"></script><script src="script/plugins/viewer.js"></script>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/custom.css">
     <link rel="stylesheet" href="styles/header.css">
